<resources>
    <string name="app_name">Practical Parent</string>
    <string name="flip_coin_button">FLIP COIN</string>
    <string name="children_button">CHILDREN</string>
    <string name="timeout_button">TIMEOUT</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="empty_timer">00:00</string>
    <string name="back">Back</string>
    <string name="custom">Custom</string>
    <string name="time_selected">"%1$d minutes</string>
    <string name="custom_minutes">Custom Minutes</string>
    <string name="timeout_title">Timer</string>

    <string name="task_alert_duplicate_title">A task already has that name!</string>
    <string name="task_alert_duplicate_dec">Please choose something else</string>
    <string name="task_input_helper">Name</string>
    <string name="task_info_title">%name%</string>
    <string name="task_info_finish">Finish</string>
    <string name="task_info_current_child">Current Turn: %name%</string>
    <string name="task_title_new">New Task</string>
    <string name="task_title_edit">Editing Task</string>

    <string name="flip_coin_history_action_title">History</string>
    <string name="flip_coin_choose_action_title">Choose a side</string>
    <string name="flip_coin_choose_child_title">Choose a child</string>
    <string name="flip_coin_flip_action_title">Flip!</string>
    <string name="flip_coin_flip_button">Flip</string>
    <string name="flip_coin_flip_head_title">Heads</string>
    <string name="flip_coin_flip_tails_title">Tails</string>
    <string name="flip_coin_finish_button_text">OK</string>
    <string name="flip_coin_win_toast">You won! %happy%</string>
    <string name="flip_coin_lose_toast">You lost %sad%</string>
    <string name="flip_coin_choose_child_none">NONE</string>

    <string name="title_activity_children_configure">ChildrenConfigureActivity</string>
    <string name="add_child_btn_text">New Child</string>
    <string name="back_btn_text">Back</string>
    <string name="save_btn_text">SAVE</string>
    <string name="edit_btn_text">EDIT</string>
    <string name="complete_btn_text">COMPLETE</string>
    <string name="delete_btn_text">DELETE</string>
    <string name="name_edit_txt">Name</string>
    <string name="child_name_txt"><b>Child Name</b></string>
    <string name="timeout_remaining">Time Remaining</string>
    <string name="child_activity_title">Children</string>
    <string name="child_configure_edit_title">Editing</string>
    <string name="child_configure_create_title">Creating</string>
    <string name="timeout_finished">Timeout Finished!</string>
    <string name="stop_timeout">Stop Alarm</string>
    <string name="alarm_icon">Alarm Warning Icon</string>
    <string name="timer_notification_service_channel">Timer Notification Service Channel</string>
    <string name="timeout_notification_channel_desc">Timer is running notification</string>
    <string name="close_btn_txt">CLOSE</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_positive">YES</string>
    <string name="dialog_negative">NO</string>
    <string name="dialog_title_dupe_name">Duplicate Child Name Found</string>
    <string name="dialog_msg_dupe_name">Please enter a unique child name</string>
    <string name="dialog_title_invalid_name">Invalid Name</string>
    <string name="dialog_msg_invalid_name">Please enter a non-empty name</string>
    <string name="dialog_title_name_too_large">Too many characters</string>
    <string name="dialog_msg_name_too_large">Please use a shorter name!</string>
    <string name="dialog_title_delete">Delete Child</string>
    <string name="dialog_msg_delete">Are you sure you want to delete this child? 👀👮⚠🚨</string>
    <string name="add_child_title"><b>New Child</b></string>
    <string name="flipChoiceLabel">"Coin Choice: "</string>
    <string name="flipResultLabel">"Coin Result: "</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="help_button">Help</string>
    <string name="spacer_textview">\n</string>
    <string name="help_activity_title">About Practical Parent</string>
    <string name="about_authors_title"><b><u>About the Practical Parent App</u></b></string>
    <string name="about_authors_description">
        \nThe \"Practical Parent\" app is developed by Team Phosphorus for CMPT 276: Intro to Software Engineering.
        \n\nThe developers of \"Practical Parent\" are:
        \n • Jack Clarke
        \n • Matt Friesen
        \n • Jerry Deng Zhu
        \n • Mark Dionglay
    </string>
    <string name="copyright_info_title"><b><u>\nCopyright Resources Used</u></b></string>
    <string name="copyright_info_description">
        \nThe following are links to image and sound resources used in the application.\n
    </string>
    <string name="coin_img_link"> • <a href="https://en.wikipedia.org/wiki/Quarter_(Canadian_coin)">Link to coin images used</a></string>
    <string name="timer_relax_bg_link"> • <a href="https://wallpaperaccess.com/minimal-phone">Link to screensaver image in Timeout</a></string>
    <string name="app_icon_link"> • <a href="https://www.pngfind.com/download/hwbwiwi_child-icon-png-children-protection-png-transparent-png/">Link to application icon image</a></string>
    <string name="menu_icon_link"> • <a href="https://www.pinterest.ca/pin/318066792439069784/">Link to image in the main menu</a></string>
    <string name="app_bg_link"> • <a href="https://www.manku.dev/">App background images courtesy of Tanish Manku</a></string>
    <string name="coin_sound_link"> • <a href="https://www.youtube.com/watch?v=Hy7DORHmiKY">Link to coin flipping sound</a></string>
    <string name="victory_sound_link"> • <a href="https://www.youtube.com/watch?v=lcJH8JtgZoE">Link to coin flip victory sound</a></string>
    <string name="defeat_sound_link"> • <a href="https://www.youtube.com/watch?v=8Xt1kUK71lc">Link to coin flip defeat sound</a></string>
    <string name="inhale_exhale_sounds_link"> • <a href="https://youtu.be/n_-9mrBMLA8?t=108">Link to Inhale and Exhale Sounds</a></string>

    <string name="tasks_button_name">tasks to do</string>
    <string name="task_activity_title">Who\'s Turn Is It?</string>
    <string name="configure_task_activity_title">Configure Task</string>
    <string name="task_name_placeholder">Task Name</string>
    <string name="current_turn_display">"Current Turn: %name%"</string>
    <string name="task_title">New Task</string>
    <string name="task_delete_title">Delete Task</string>
    <string name="task_delete_msg">Are you sure you want to delete this task?</string>
    <string name="empty_child_task">No children</string>
    <string name="activity_title_add_task">Add New Task</string>
    <string name="activity_title_edit_task">Edit Task</string>
    <string name="child_not_available">Not Available</string>
    <string name="percent_25">25%</string>
    <string name="percent_50">50%</string>
    <string name="percent_75">75%</string>
    <string name="percent_100">100%</string>
    <string name="percent_200">200%</string>
    <string name="percent_300">300%</string>
    <string name="percent_400">400%</string>
    <string name="speed_rate_of_the_timer">Speed Rate of the Timer</string>
    <string name="timer_speed">Time @ %1$d%%</string>
    <string name="initial_state_btn_text">Begin</string>
    <string name="guide_message">Hold the Button to Inhale!</string>
    <string name="guide_exhale">Let go to Exhale!</string>
    <string name="guide_complete">Complete!</string>
    <string name="breathe_btn_text">Breathe</string>
    <string name="breathe_state_out">Out</string>
    <string name="breathe_state_in">In</string>
    <string name="breathe_state_finished">Good job!</string>
    <string name="singular_breath_chosen_text">Let\'s take %1$d Breath Together</string>
    <string name="num_breaths_chosen_text">Let\'s take %1$d Breaths Together</string>
    <string name="activity_breathe_title">Take Breaths to Calm Down</string>
    <string name="remaining_breaths_text">"Remaining Breaths: %1$d"</string>
    <string name="history_toggle">View History</string>
    <string name="no_task_history_list">No History</string>
    <string name="task_history_completed_turn">Completed: %date%</string>
</resources>