<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- https://www.youtube.com/watch?v=oh4YOj9VkVE -->

    <item
        android:id="@+id/timerSpeedRate"
        android:icon="@drawable/ic_baseline_speed_24"
        android:title="@string/speed_rate_of_the_timer"
        app:showAsAction="ifRoom">

    <menu>
        <item
            android:id="@+id/percent_25"
            android:title="@string/percent_25"/>

        <item
            android:id="@+id/percent_50"
            android:title="@string/percent_50"/>

        <item
            android:id="@+id/percent_75"
            android:title="@string/percent_75"/>

        <item
            android:id="@+id/percent_100"
            android:title="@string/percent_100"/>

        <item
            android:id="@+id/percent_200"
            android:title="@string/percent_200"/>

        <item
            android:id="@+id/percent_300"
            android:title="@string/percent_300"/>

        <item
            android:id="@+id/percent_400"
            android:title="@string/percent_400"/>
    </menu>

    </item>

</menu>
