<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lavender2_min_1"
    tools:context=".children.ChildConfigureActivity">

    <LinearLayout
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.356">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:text="@string/save_btn_text"
            app:icon="@drawable/save_icon"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnUseCamera"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:text="@string/camera"
            app:icon="@drawable/camera_icon"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnUseGallery"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:text="@string/gallery"
            app:icon="@drawable/gallery_icon"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:minHeight="48dp"
            android:text="@string/delete_btn_text"
            app:icon="@drawable/delete_icon"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="329dp"
        android:layout_height="78dp"
        android:layout_marginBottom="276dp"
        android:ems="10"
        android:hint="@string/name_edit_txt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/configureChildTitle"
        android:layout_width="375sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/child_name_txt"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/imgChildPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configureChildTitle"
        app:srcCompat="@drawable/child_portrait_default"
        tools:ignore="ContentDescription,ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>