<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timeoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timeout.TimeoutActivity">

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_timer"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/btnStartAndPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="@+id/tvCountDown"
        app:layout_constraintStart_toStartOf="@+id/tvCountDown"
        app:layout_constraintTop_toBottomOf="@+id/tvCountDown" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnStartAndPause"
        app:layout_constraintStart_toStartOf="@+id/btnStartAndPause"
        app:layout_constraintTop_toBottomOf="@+id/btnStartAndPause"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroupTimeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <EditText
        android:id="@+id/inputCustomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/custom_minutes"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTimeOptions"
        tools:ignore="Autofill"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>